<resources>
    <string name="app_name">学术讲座</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="conn_err">加载失败</string>
    <string name="myorder">我的预约</string>
    <string name="logout">切换账号</string>
    <string name="changepsw">修改密码</string>
    <string name="appoint_success">预约成功</string>
    <string name="appoint_failed">人数已满,无法预约</string>
    <string name="appoint_error">预约失败</string>
    <string name="cancel_success">已经取消</string>
    <string name="cancel_failed">取消失败</string>
    <string name="login_failed">用户名或密码错误</string>
    <string name="login_success">登录成功</string>
    <string name="login_error">无法连接到服务器</string>
    <string name="signin">签到</string>
    <string name="exit">退出</string>
</resources>
