<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- 定义一个普通菜单项 -->
    <item
        android:id="@+id/item_myorder"
        android:icon="@drawable/myorder"
        android:title="@string/myorder"
        app:showAsAction="always|withText"></item>
    <item
    android:id="@+id/item_changepsw"
    android:title="@string/changepsw"
    app:showAsAction="always|withText"></item>
    <item
        android:id="@+id/item_signin"
        android:title="@string/signin"
        app:showAsAction="always|withText"/>
    <item
        android:id="@+id/item_logout"
        android:icon="@drawable/logout"
        android:title="@string/logout"
        app:showAsAction="always|withText"></item>
</menu>
